# NConsole-rs

./: Cargo.toml  README.md
src/: command.rs  error_handler.rs  lib.rs  traits.rs
