[package]
name = "nconsole"
version = "0.1.7"
authors = ["Enn3Developer <arturpeshko39@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Enn3Developer/NConsole-rs"
description = "NConsole for Rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"